Fix for interactive tutorials on mobile and for sticky header margin

--- a/src/documents/styles/1-settings/_variables.less
+++ b/src/documents/styles/1-settings/_variables.less
@@ -287,6 +287,12 @@ Syntax for sets:
 // Large screen / wide desktop
 @container-lg-desktop: ((1140px + 30px));
 
+// Header
+@header-height: 50/14em;
+
+// Sticky header
+@sticky-header-height: 62/14em;
+
 // Footer
 @footer-height: 40/14em;
 
